fix alignment and add h1 for categories of crime

--- a/universitywatch/app/assets/stylesheets/schools.scss
+++ b/universitywatch/app/assets/stylesheets/schools.scss
@@ -40,3 +40,7 @@
 }
 
 
+p.category-title {
+  font-weight: bold;
+  text-align: center;
+}
